--- a/src/components/user/User.css
+++ b/src/components/user/User.css
@@ -1,7 +1,8 @@
-.wrap-user{
-    display: flex;
-    justify-content: space-between;
-}
-.details-btn{
-    height: 30px;
+.one-users{
+    border: 1px solid silver;
+    width: fit-content;
+    padding: 10px;
+    background: #eef0f1;
+    margin: 10px;
+    border-radius: 10px 10px 0 0;
 }
